2004-05-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b104

	* Change: Enable optional syslog reporting for login/out

2004-05-10  Alan Harder <alan.harder@sun.com>  1.4.4-cvs-b103

	* Regenerate highlights as needed when moving albums around.

2004-05-10  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.4-cvs-b102

	* Fixed alt="..." attribute in <img> tags to strip out HTML and then
	  convert double quotes to HTML entities. Previously, displaying image
	  captions with HTML or double quotes would output malformed HTML.
	  (Introduced in 1.4.4-cvs-b72 when we added the caption text to the
	  alt attribute.)

2004-05-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b101

	* Change:  Use unhtmlentities() instead of strtr() - this allows
	  us to use html_entity_decode() if it's present

2004-05-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b100

	* Change:  Add missing piece of JS for the localGetElementsByTagName()
	  code

2004-05-06  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b99

        * Fix: Links to docs and diagnostics(!) didnt work with empty config.php
               ($gallery->app->photoAlbumURL is not set)

2004-05-05  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b98

	* Change: JS shim to make getElementsByTagName() less browser
	  version dependant

2004-05-05  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b97

	* Change: Config wizard now starts with submit buttons disabled.  They
	  are enabled during document.onload using JavaScript.  This will
	  prevent errors from occuring due to people pressing Next before the page has
	  completed loading, thereby not sending all of the config data to the next page.

2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b96

	* Fix: Warning in when recovering password with adding isset to userData.inc.
		Thanks to floridave.

2004-05-04  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b95

	* Change: Allow doCommand("delete-comment") to use the $return
	  var
