@@ -1,3 +1,11 @@
+2004-05-11  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b105
+
+	* Fixed upload (and slideshow) applets when Gallery is embedded in a CMS.
+	* Applets now attempt to use the same language as the Gallery (GR language
+	  support is sorely lacking at the moment).
+	* Integrated applets version 1.4-b10, which also contain many improvements to
+	  slideshow and upload. Please see GR ChangeLog for more details.
+
 2004-05-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b104
 
 	* Change: Enable optional syslog reporting for login/out
